chromeos: Destroy AXTree when remote mojo app closes

Observe remote mojo apps (like keyboard shortcut viewer) for disconnect.
Inform accessibility extensions via the automation API that they can
destroy the AX node tree for the app. This handles both normal app
shutdown and app crashes.

Also rename ShowKeyboardShortcutViewer() to Toggle, since that's what
it actually does.

TBR=xiyuan@chromium.org

Bug: 871414
Test: added to LoggedInSpokenFeedbackTest.KeyboardShortcutViewer
Change-Id: I463d69473a477a9ba2daee5d45a7e65c94981466
Reviewed-on: https://chromium-review.googlesource.com/1166193
Commit-Queue: James Cook <jamescook@chromium.org>
Reviewed-by: David Tseng <dtseng@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581654}
Former-commit-id: e7a3b5d5c3d5a43008dc251b57ba87019f1485b6