chrome/browser/chromeos/accessibility/ax_host_service.h
@@ -52,6 +52,7 @@ class AXHostService : public service_manager::Service,
  private:
   void AddBinding(ax::mojom::AXHostRequest request);
   void NotifyAutomationEnabled();
+  void OnRemoteHostDisconnected();
 
   static AXHostService* instance_;
   static bool automation_enabled_;
