chrome/browser/ui/ash/ksv/keyboard_shortcut_viewer_util.cc
@@ -14,7 +14,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace keyboard_shortcut_viewer_util {
 
-void ShowKeyboardShortcutViewer() {
+void ToggleKeyboardShortcutViewer() {
   base::TimeTicks user_gesture_time = base::TimeTicks::Now();
   if (ash::features::IsKeyboardShortcutViewerAppEnabled()) {
     shortcut_viewer::mojom::ShortcutViewerPtr shortcut_viewer_ptr;
