chrome/browser/chromeos/accessibility/spoken_feedback_browsertest.cc
@@ -26,6 +26,7 @@
 #include "chrome/browser/chromeos/login/ui/login_display_host.h"
 #include "chrome/browser/chromeos/login/ui/webui_login_view.h"
 #include "chrome/browser/chromeos/profiles/profile_helper.h"
+#include "chrome/browser/extensions/api/automation_internal/automation_event_router.h"
 #include "chrome/browser/extensions/api/braille_display_private/stub_braille_controller.h"
 #include "chrome/browser/speech/tts_controller.h"
 #include "chrome/browser/speech/tts_platform.h"
@@ -52,6 +53,7 @@
 #include "testing/gtest/include/gtest/gtest.h"
 #include "ui/base/test/ui_controls.h"
 #include "ui/compositor/scoped_animation_duration_scale_mode.h"
+#include "ui/views/mus/ax_remote_host.h"
 #include "ui/views/widget/widget.h"
 
 using extensions::api::braille_display_private::StubBrailleController;
@@ -247,12 +249,35 @@ IN_PROC_BROWSER_TEST_F(LoggedInSpokenFeedbackTest,
 // Tests the keyboard shortcut viewer, which is an out-of-process mojo app.
 IN_PROC_BROWSER_TEST_F(LoggedInSpokenFeedbackTest, KeyboardShortcutViewer) {
   EnableChromeVox();
-  keyboard_shortcut_viewer_util::ShowKeyboardShortcutViewer();
+  keyboard_shortcut_viewer_util::ToggleKeyboardShortcutViewer();
 
   // Focus should move to the search field and ChromeVox should speak it.
   while ("Search for keyboard shortcuts" !=
          speech_monitor_.GetNextUtterance()) {
   }
+
+  // Capture the destroyed AX tree id when the remote host disconnects.
+  base::RunLoop run_loop;
+  int destroyed_tree_id = -1;
+  extensions::AutomationEventRouter::GetInstance()
+      ->SetTreeDestroyedCallbackForTest(base::BindRepeating(
+          [](base::RunLoop* run_loop, int* destroyed_tree_id, int tree_id) {
+            *destroyed_tree_id = tree_id;
+            run_loop->Quit();
+          },
+          &run_loop, &destroyed_tree_id));
+
+  // Close the remote shortcut viewer app.
+  keyboard_shortcut_viewer_util::ToggleKeyboardShortcutViewer();
+
+  // Wait for the AX tree to be destroyed.
+  run_loop.Run();
+
+  // Verify the correct AX tree was destroyed.
+  EXPECT_EQ(views::AXRemoteHost::kRemoteAXTreeID, destroyed_tree_id);
+
+  extensions::AutomationEventRouter::GetInstance()
+      ->SetTreeDestroyedCallbackForTest(base::DoNothing());
 }
 
 //
